syntax = "proto3";

package go.micro.openbank.account.arv;

service Account {
    rpc QueryUserByName (Request) returns (Response) {
    }
    rpc CreateUser (Request) returns (Response) {
    }
}

message user {
    int64   id = 1;
    string  name = 2;
    string  pwd = 3;
    uint64  createdTime = 4;
    uint64  updatedTime = 5;
}

message Error {
    int32   code = 1;
    string  detail = 2;
}

message Request {
    string  userID = 1;
    string  userName = 2;
    string  userPwd = 3;
    bytes   idfile = 4;
    string  flag = 5;
}

message Response {
    bool    success = 1;
    Error   error = 2;
    user    user = 3;
}

